fix(ww): update recommendation block date color to have better contrast

--- a/wordweb-app/src/main/resources/scss/_recommendation.scss
+++ b/wordweb-app/src/main/resources/scss/_recommendation.scss
@@ -24,4 +24,8 @@
     font-size: 1rem;
     margin: 0;
   }
+
+  &__date {
+    color: var(--color-discord-gray);
+  }
 }
