--- a/wordweb-app/src/main/resources/scss/_variables.scss
+++ b/wordweb-app/src/main/resources/scss/_variables.scss
@@ -121,6 +121,7 @@ $sl-img-border-large: $sl-img-border-medium;
   --color-even-darker-gray: #5A656F;
   --color-notes-gray: #595959;
   --color-icon-gray: #636B74;
+  --color-discord-gray: #596573;
   --color-white: #{$white};
   --color-blue-100: #{$blue-100};
   --color-blue-200: #{$blue-200};
